--- a/python_practice.ipynb
+++ b/python_practice.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOsX6lsvYWkSKy4zOvwcbfF",
+      "authorship_tag": "ABX9TyNrMtPTGxEkuycebg6ML50r",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1300,6 +1300,7 @@
     {
       "cell_type": "code",
       "source": [
+        "#correct way\n",
         "counts = []\n",
         "count_per_char = 1\n",
         "string='aaaabbbcca'\n",
@@ -1326,7 +1327,7 @@
       ],
       "metadata": {
         "id": "3JczmmGX-JI4",
-        "outputId": "42e9cc55-ab30-45fd-a29e-cb085746cc69",
+        "outputId": "3015f242-5f87-4bb4-c623-27c749d0e2a9",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1341,17 +1342,71 @@
             ]
           },
           "metadata": {},
-          "execution_count": 34
+          "execution_count": 4
         }
       ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "def rle(s):\n",
+        "    ans, cur, num = [], None, 0\n",
+        "    for i in range(len(s)):\n",
+        "        if i == 0:\n",
+        "            cur, num = s[i], 1\n",
+        "        elif cur != s[i]:\n",
+        "            ans.append((cur, num))\n",
+        "            cur, num = s[i], 1\n",
+        "        else:\n",
+        "            num += 1\n",
+        "        if i == len(s) - 1:\n",
+        "            ans.append((cur, num))\n",
+        "    return ans"
+      ],
       "metadata": {
         "id": "JUOazCtW-Js-"
       },
       "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "rle('aaaabbbcca')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "UZ0jXzUavkX1",
+        "outputId": "5340f73d-4875-4e7e-f1ed-b98eb9f29a97"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[('a', 4), ('b', 3), ('c', 2), ('a', 1)]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 13
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import itertools\n",
+        "\n",
+        "def rle(s):\n",
+        "    return [(l, len(list(g))) for l, g in itertools.groupby(s)]"
+      ],
+      "metadata": {
+        "id": "QQhdL6QZ_Jj8"
+      },
+      "execution_count": 12,
       "outputs": []
     }
   ]
