--- a/python_practice.ipynb
+++ b/python_practice.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOCSiVNYDK8u02nB/0fOni8",
+      "authorship_tag": "ABX9TyMI+OcqgJi4iP2vHoecSoIy",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,7 +23,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/phycem/SQL-and-Python-Best-Practices/blob/main/python_practice.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/phycem/Python-Functions-and-SQL-Queries/blob/main/python_practice.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -1558,10 +1558,141 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## Recursion Problems\n",
+        "\n",
+        "Write a python program to calculate sum of numbers in a list\n",
+        "\n",
+        "list_sum([2, 4, 5, 6, 7])"
+      ],
+      "metadata": {
+        "id": "FLEyZqMJvmOo"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def list_sum(num_List):\n",
+        "    if len(num_List) == 1:\n",
+        "        return num_List[0]\n",
+        "    else:\n",
+        "        return num_List[0] + list_sum(num_List[1:])"
+      ],
+      "metadata": {
+        "id": "6DvJVkr7zjFN"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def list_sum(num_List):\n",
+        "    if len(num_List) ==0:\n",
+        "        raise ValueError \n",
+        "    elif len(num_List) == 1:\n",
+        "        return num_List[0]\n",
+        "    else:\n",
+        "        print(num_List)\n",
+        "        return num_List[0] + list_sum(num_List[1:])\n",
+        "\n",
+        "list_sum([2, 4, 5, 6, 7])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "bYUI18De0tqi",
+        "outputId": "ec5094fb-cc51-4037-ae10-674230d414e5"
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[2, 4, 5, 6, 7]\n",
+            "[4, 5, 6, 7]\n",
+            "[5, 6, 7]\n",
+            "[6, 7]\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "24"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 17
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Write a Python program to calculate the harmonic sum of n-1.\n",
+        "Note: The harmonic sum is the sum of reciprocals of the positive integers.\n",
+        "harmonic_sum(n) = 1 + 1/2 + ... + 1/n"
+      ],
+      "metadata": {
+        "id": "LJU5xrBq4rqG"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def harmonic_sum(n):\n",
+        "    if n <= 0:\n",
+        "      raise ValueError\n",
+        "    elif n == 1:\n",
+        "      return 1\n",
+        "    else:\n",
+        "      return 1/n + harmonic_sum(n-1)\n",
+        "\n",
+        "print(harmonic_sum(3))\n",
+        "\n",
+        "print(harmonic_sum(-1))\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 356
+        },
+        "id": "HqnKw_Mt0wsl",
+        "outputId": "7a712ec7-0ffa-429b-c4ac-381d3afdae49"
+      },
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1.8333333333333333\n"
+          ]
+        },
+        {
+          "output_type": "error",
+          "ename": "ValueError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-35-bb2d46ad88e5>\u001b[0m in \u001b[0;36m<cell line: 11>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mharmonic_sum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mharmonic_sum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     12\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-35-bb2d46ad88e5>\u001b[0m in \u001b[0;36mharmonic_sum\u001b[0;34m(n)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mharmonic_sum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mn\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mn\u001b[0m \u001b[0;34m<=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m       \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m     \u001b[0;32melif\u001b[0m \u001b[0mn\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m       \u001b[0;32mreturn\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mValueError\u001b[0m: "
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "Mi4DYjkDwT6Q"
+        "id": "tYq6kxq39QDG"
       },
       "execution_count": null,
       "outputs": []
