--- a/python_practice.ipynb
+++ b/python_practice.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMI+OcqgJi4iP2vHoecSoIy",
+      "authorship_tag": "ABX9TyMtcwXV65epPPENwz2cgeZC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1606,7 +1606,7 @@
         "id": "bYUI18De0tqi",
         "outputId": "ec5094fb-cc51-4037-ae10-674230d414e5"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1665,7 +1665,7 @@
         "id": "HqnKw_Mt0wsl",
         "outputId": "7a712ec7-0ffa-429b-c4ac-381d3afdae49"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1689,13 +1689,85 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "1. Write a Python program to calculate the sum of a list of numbers."
+      ],
       "metadata": {
-        "id": "tYq6kxq39QDG"
+        "id": "W9z1BMaomdcu"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def sum_list_numbers(num_list):\n",
+        "    if len(num_list)==0:\n",
+        "      raise ValueError\n",
+        "    elif len(num_list)==1:\n",
+        "       return num_list[0]\n",
+        "    else:\n",
+        "       return num_list[0]+sum_list_numbers(num_list[1:])\n",
+        "\n",
+        "sum_list_numbers([2, 4, 5, 6, 7])\n"
+      ],
+      "metadata": {
+        "id": "tYq6kxq39QDG",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "cbe13969-90eb-4113-d399-d66654945c37"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "24"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 3
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "2. Write a Python program to convert an integer to a string in any base."
+      ],
+      "metadata": {
+        "id": "6qkyswVpqkjx"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def to_string(n,base):\n",
+        "    conver_tString = \"0123456789ABCDEF\"\n",
+        "    if n<base:\n",
+        "       return conver_tString[n]\n",
+        "    else:\n",
+        "       return to_string(n//base,base) + conver_tString[n%base]\n",
+        "print(to_string(2835,16))\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Ei82s5_UqlRH",
+        "outputId": "7aa8374c-09c3-429d-e4a3-5cdd60aec1f8"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "B13\n"
+          ]
+        }
+      ]
     }
   ]
 }
