--- a/python_practice.ipynb
+++ b/python_practice.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMtcwXV65epPPENwz2cgeZC",
+      "authorship_tag": "ABX9TyMJv2shnMwbn6cH7pi/YZ1l",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1717,7 +1717,7 @@
         },
         "outputId": "cbe13969-90eb-4113-d399-d66654945c37"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1758,13 +1758,93 @@
         "id": "Ei82s5_UqlRH",
         "outputId": "7aa8374c-09c3-429d-e4a3-5cdd60aec1f8"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "B13\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "3. Write a Python program to sum recursion lists.\n",
+        "Test Data: [1, 2, [3,4], [5,6]]\n",
+        "Expected Result: 21"
+      ],
+      "metadata": {
+        "id": "Q7Cwn1tfWryj"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def recursive_anylist_sum(list):\n",
+        "    total = 0\n",
+        "    for element in list:\n",
+        "        if type(element) == type([]):\n",
+        "          total = total + recursive_anylist_sum(element)\n",
+        "        else:\n",
+        "          total = total + element\n",
+        "    return total\n",
+        "\n",
+        "print(recursive_anylist_sum([1, 2, [3,4], [5,6]]))\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "6K64KRTlWsuE",
+        "outputId": "585b7726-6adc-4165-8664-173a5eaaaa6e"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "21\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "4. Write a Python program to get the factorial of a non-negative integer."
+      ],
+      "metadata": {
+        "id": "ZdH1eR73bekG"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def factorial_finder(n):\n",
+        "    if n ==0 or n==1:\n",
+        "      return 1\n",
+        "    else:\n",
+        "      return n * factorial_finder(n-1)\n",
+        "print(factorial_finder(5))\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "nOsZsJK9be_7",
+        "outputId": "d97a9ee4-044d-4984-9c48-d78ac4c7ddc8"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "120\n"
           ]
         }
       ]
