--- a/python_practice.ipynb
+++ b/python_practice.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMJv2shnMwbn6cH7pi/YZ1l",
+      "authorship_tag": "ABX9TyMB/ekhop3i5hPiXdz7rlHx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1801,7 +1801,7 @@
         "id": "6K64KRTlWsuE",
         "outputId": "585b7726-6adc-4165-8664-173a5eaaaa6e"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1838,7 +1838,7 @@
         "id": "nOsZsJK9be_7",
         "outputId": "d97a9ee4-044d-4984-9c48-d78ac4c7ddc8"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1848,6 +1848,224 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Write a Python program to solve the Fibonacci sequence using recursion."
+      ],
+      "metadata": {
+        "id": "cBWXqUqe1ryj"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def fibonacci(n):\n",
+        "    if n==1 or n==2:\n",
+        "      return 1\n",
+        "    else:\n",
+        "      return (fibonacci(n-2) + (fibonacci(n-1)))\n",
+        "\n",
+        "print(fibonacci(7))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "UILtGK7X1sqD",
+        "outputId": "4557a4e4-414a-44a9-8fd7-fc14bc2c6b0f"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "13\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Write a Python program to get the sum of a non-negative integer.\n",
+        "### Test Data:\n",
+        "### sumDigits(345) -> 12\n",
+        "### sumDigits(45) -> 9"
+      ],
+      "metadata": {
+        "id": "I-6YSnTT26QX"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def sumDigits(n):\n",
+        "  if n==0:\n",
+        "    return 0 \n",
+        "  else:\n",
+        "    return n%10 + sumDigits(int(n/10))\n",
+        "\n",
+        "print(sumDigits(345))\n",
+        "print(sumDigits(9830))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "qLqXWDNV27QX",
+        "outputId": "027f46e8-bf57-4989-b897-d041a0e08d7e"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "12\n",
+            "20\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Write a Python program to calculate the geometric sum of n-1."
+      ],
+      "metadata": {
+        "id": "1pnrnl4vkk45"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def geometric_sum(n):\n",
+        "  if n<0:\n",
+        "    return 0 \n",
+        "  else:\n",
+        "    return 1/(pow(2,n)) + geometric_sum(n-1)\n",
+        "print(geometric_sum(7))\n",
+        "\n",
+        "print(geometric_sum(9))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ARguaztTjD_C",
+        "outputId": "761eb8bb-574f-4165-cf35-efd34d699d79"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1.9921875\n",
+            "1.998046875\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Write a Python program to calculate the value of 'a' to the power of 'b'.\n",
+        "\n",
+        "Test Data:\n",
+        "(power(3,4) -> 81"
+      ],
+      "metadata": {
+        "id": "VlduPfZhnRb4"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def power(a,b):\n",
+        "    if b==0:\n",
+        "      return 1\n",
+        "    elif a==0:\n",
+        "      return 0 \n",
+        "    elif b==1:\n",
+        "      return a\n",
+        "    else:\n",
+        "      return a*power(a,b-1)\n",
+        "\n",
+        "print(power(3,4))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "hPT8MlSKkwNm",
+        "outputId": "d27ac65b-ffac-4bb8-c7df-25f097252948"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "81\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        " Write a Python program to find the greatest common divisor (GCD) of two integers."
+      ],
+      "metadata": {
+        "id": "CmufvDoNohau"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def common_divisors(a,b):\n",
+        "  low =min(a,b)\n",
+        "  high =max(a,b)\n",
+        "\n",
+        "  if low ==0:\n",
+        "    return high\n",
+        "  elif low == 1:\n",
+        "    return 1\n",
+        "  else:\n",
+        "    return common_divisors(low, high%low)\n",
+        "\n",
+        "print(common_divisors(47,99))\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ctEC7RoioLtB",
+        "outputId": "d05c286f-17a2-4449-f63b-ca18190f50d7"
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "goODe1AMuISg"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
