--- a/python_practice.ipynb
+++ b/python_practice.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMB/ekhop3i5hPiXdz7rlHx",
+      "authorship_tag": "ABX9TyNS8UJpYwAeUEvpqwd7p6uc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -293,7 +293,7 @@
         "      avg = mean(numbers)\n",
         "      var = sum((i - avg)**2 for i in numbers) / (len(numbers)-1)\n",
         "      dev = sqrt(var)\n",
-        "      return dev \n",
+        "      return dev\n",
         "    return float('NaN')\n",
         "\n",
         "print(std_dev([1,6,4,9]))\n",
@@ -399,7 +399,7 @@
         "\n",
         "print(remove_duplicates2([1,2,6,8,90,43,43,57,4,3,4,5,56,3,2,4]))\n",
         "\n",
-        "           "
+        ""
       ],
       "metadata": {
         "colab": {
@@ -458,7 +458,7 @@
     {
       "cell_type": "code",
       "source": [
-        "from collections import Counter \n",
+        "from collections import Counter\n",
         "\n",
         "numbers = [1, 3, 2, 1, 5, 3, 5, 1, 4]\n",
         "\n",
@@ -632,7 +632,7 @@
         "           c.append(i)\n",
         "    return c\n",
         "intersection_of_sets({'a', 'b', 'c'}, {'a', 'd'})\n",
-        "           "
+        ""
       ],
       "metadata": {
         "colab": {
@@ -727,7 +727,7 @@
         "\n",
         "def jaccard(a,b):\n",
         "    intersection = intersection_of_sets(a,b)\n",
-        "    union = union_of_sets(a,b) \n",
+        "    union = union_of_sets(a,b)\n",
         "    return len(intersection)/len(union)\n",
         "\n",
         "jaccard({'a', 'b', 'c'}, {'a', 'd'})\n"
@@ -765,7 +765,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#correct answer \n",
+        "#correct answer\n",
         "\n",
         "from math import log10\n",
         "\n",
@@ -778,10 +778,10 @@
         "    ans = {}\n",
         "    for token in n_tokens:\n",
         "        ans[token] = log10(len(docs)/(1+n_tokens[token]))\n",
-        "    return ans \n",
+        "    return ans\n",
         "idff([['interview', 'questions'], ['interview', 'answers']])\n",
         "\n",
-        "        "
+        ""
       ],
       "metadata": {
         "colab": {
@@ -807,7 +807,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#Second correctly way \n",
+        "#Second correctly way\n",
         "from math import log10\n",
         "def idf2(docs):\n",
         "    n_docs = len(docs)\n",
@@ -942,7 +942,7 @@
       "cell_type": "code",
       "source": [
         "my_set = {'Geeks', 'for', 'geeks'}\n",
-        " \n",
+        "\n",
         "s = list(my_set)\n",
         "print(s)\n",
         "print(s[1])"
@@ -1017,27 +1017,27 @@
         "        for token in document:\n",
         "            tokens.add(token)\n",
         "            tokenn= list(tokens)\n",
-        "          \n",
+        "\n",
         "    for elem in tokens:\n",
         "        print(elem[0])\n",
         "        print(elem[1])\n",
         "        for doc in documents:\n",
         "            if elem in doc:\n",
         "               a +=1\n",
-        "               count[elem[0]]=a \n",
+        "               count[elem[0]]=a\n",
         "            elif elem[1] in doc:\n",
         "                 b +=1\n",
-        "                 count[elem[1]]=b \n",
+        "                 count[elem[1]]=b\n",
         "            elif elem[2] in doc:\n",
-        "                 c +=1 \n",
-        "                 count[elem[2]]=c \n",
-        "               \n",
-        "               \n",
+        "                 c +=1\n",
+        "                 count[elem[2]]=c\n",
+        "\n",
+        "\n",
         "    return count\n",
-        "       \n",
-        "             \n",
-        "        \n",
-        "      \n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
         "idf([['interview', 'questions'], ['interview', 'answers']])"
       ],
       "metadata": {
@@ -1187,10 +1187,10 @@
         "        site = (id.split('-'))[1]\n",
         "        sites.append(site)\n",
         "        sites_set.add(site)\n",
-        "    ans = {} \n",
+        "    ans = {}\n",
         "    if ((elem) for elem in sites_set) == ((ele) for ele in sites):\n",
-        "       ans[elem]= ans.get(elem,0) + 1 \n",
-        "            \n",
+        "       ans[elem]= ans.get(elem,0) + 1\n",
+        "\n",
         "    return sites, sites_set, ans\n"
       ],
       "metadata": {
@@ -1210,10 +1210,10 @@
         "        site = (id.split('-'))[1]\n",
         "        sites.append(site)\n",
         "        sites_set.add(site)\n",
-        "    ans = {} \n",
+        "    ans = {}\n",
         "    for elem in sites_set:\n",
         "        if elem in sites:\n",
-        "            ans[elem]= ans.get(elem,0) + 1 \n",
+        "            ans[elem]= ans.get(elem,0) + 1\n",
         "    return ans\n"
       ],
       "metadata": {
@@ -1240,11 +1240,11 @@
         "        length_created_shift = string[:i+1]\n",
         "        print(len(length_created_shift))\n",
         "        next_string = string[i+1]\n",
-        "        count = 0 \n",
+        "        count = 0\n",
         "        if char == next_string:\n",
         "            encoded_character.append((char,count+1))\n",
         "        if len(length_created_shift)== len(string):\n",
-        "           \n",
+        "\n",
         "           break\n",
         "\n",
         "    return encoded_character"
@@ -1457,13 +1457,13 @@
         "def binary_search(lst,num):\n",
         "    left , right = -1 , len(lst)\n",
         "    while right - left > 1:\n",
-        "          mid = (left + right) // 2 \n",
+        "          mid = (left + right) // 2\n",
         "          if lst[mid] >= num:\n",
         "             right = mid\n",
         "          else:\n",
         "             left = mid\n",
         "    if right < 0 or right >= len(lst) or lst[right] !=num:\n",
-        "       return -1 \n",
+        "       return -1\n",
         "    else:\n",
         "       return right\n",
         "\n",
@@ -1503,7 +1503,7 @@
       "cell_type": "code",
       "source": [
         "def binary_search_tree(value,left,right):\n",
-        "    "
+        ""
       ],
       "metadata": {
         "id": "0O-FaiOupq-v"
@@ -1531,7 +1531,7 @@
         "           b = list(set(input))\n",
         "    return b\n",
         "\n",
-        "duplicate_finder([1,212,4,1,2,3,4,3,4,2,34,6,7,9,0,7656,3,212,3,4,6,5]) \n",
+        "duplicate_finder([1,212,4,1,2,3,4,3,4,2,34,6,7,9,0,7656,3,212,3,4,6,5])\n",
         "\n",
         "\n",
         "\n"
@@ -1590,7 +1590,7 @@
       "source": [
         "def list_sum(num_List):\n",
         "    if len(num_List) ==0:\n",
-        "        raise ValueError \n",
+        "        raise ValueError\n",
         "    elif len(num_List) == 1:\n",
         "        return num_List[0]\n",
         "    else:\n",
@@ -1876,7 +1876,7 @@
         "id": "UILtGK7X1sqD",
         "outputId": "4557a4e4-414a-44a9-8fd7-fc14bc2c6b0f"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1904,7 +1904,7 @@
       "source": [
         "def sumDigits(n):\n",
         "  if n==0:\n",
-        "    return 0 \n",
+        "    return 0\n",
         "  else:\n",
         "    return n%10 + sumDigits(int(n/10))\n",
         "\n",
@@ -1918,7 +1918,7 @@
         "id": "qLqXWDNV27QX",
         "outputId": "027f46e8-bf57-4989-b897-d041a0e08d7e"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1944,7 +1944,7 @@
       "source": [
         "def geometric_sum(n):\n",
         "  if n<0:\n",
-        "    return 0 \n",
+        "    return 0\n",
         "  else:\n",
         "    return 1/(pow(2,n)) + geometric_sum(n-1)\n",
         "print(geometric_sum(7))\n",
@@ -1958,7 +1958,7 @@
         "id": "ARguaztTjD_C",
         "outputId": "761eb8bb-574f-4165-cf35-efd34d699d79"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1989,7 +1989,7 @@
         "    if b==0:\n",
         "      return 1\n",
         "    elif a==0:\n",
-        "      return 0 \n",
+        "      return 0\n",
         "    elif b==1:\n",
         "      return a\n",
         "    else:\n",
@@ -2004,7 +2004,7 @@
         "id": "hPT8MlSKkwNm",
         "outputId": "d27ac65b-ffac-4bb8-c7df-25f097252948"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2047,7 +2047,7 @@
         "id": "ctEC7RoioLtB",
         "outputId": "d05c286f-17a2-4449-f63b-ca18190f50d7"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2059,8 +2059,32 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Leetcode: 787. Cheapest Flights Within K Stops\n",
+        "\n",
+        "There are n cities connected by some number of flights. You are given an array flights where flights[i] = [fromi, toi, pricei] indicates that there is a flight from city fromi to city toi with cost pricei.\n",
+        "\n",
+        "You are also given three integers src, dst, and k, return the cheapest price from src to dst with at most k stops. If there is no such route, return -1."
+      ],
+      "metadata": {
+        "id": "I4KKA8_J0S06"
+      }
+    },
+    {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "class Solution(object):\n",
+        "    def findCheapestPrice(self, n, flights, src, dst, k):\n",
+        "        \"\"\"\n",
+        "        :type n: int\n",
+        "        :type flights: List[List[int]]\n",
+        "        :type src: int\n",
+        "        :type dst: int\n",
+        "        :type k: int\n",
+        "        :rtype: int\n",
+        "        \"\"\""
+      ],
       "metadata": {
         "id": "goODe1AMuISg"
       },
