--- a/python_practice.ipynb
+++ b/python_practice.ipynb
@@ -398,8 +398,7 @@
         "    return duplicates_removed2\n",
         "\n",
         "print(remove_duplicates2([1,2,6,8,90,43,43,57,4,3,4,5,56,3,2,4]))\n",
-        "\n",
-        ""
+        "\n"
       ],
       "metadata": {
         "colab": {
@@ -631,8 +630,7 @@
         "        if i in b:\n",
         "           c.append(i)\n",
         "    return c\n",
-        "intersection_of_sets({'a', 'b', 'c'}, {'a', 'd'})\n",
-        ""
+        "intersection_of_sets({'a', 'b', 'c'}, {'a', 'd'})\n"
       ],
       "metadata": {
         "colab": {
@@ -780,8 +778,7 @@
         "        ans[token] = log10(len(docs)/(1+n_tokens[token]))\n",
         "    return ans\n",
         "idff([['interview', 'questions'], ['interview', 'answers']])\n",
-        "\n",
-        ""
+        "\n"
       ],
       "metadata": {
         "colab": {
@@ -1502,8 +1499,7 @@
     {
       "cell_type": "code",
       "source": [
-        "def binary_search_tree(value,left,right):\n",
-        ""
+        "def binary_search_tree(value,left,right):\n"
       ],
       "metadata": {
         "id": "0O-FaiOupq-v"
